@startuml

title __VIEW's Class Diagram__\n

  namespace alu0101361093.proyectofinal.view {
    class alu0101361093.proyectofinal.view.TwitterBarChart {
        + TwitterBarChart()
        + display()
        + setDatasetCreator()
    }
  }
  

  namespace alu0101361093.proyectofinal.view {
    class alu0101361093.proyectofinal.view.TwitterHistogram {
        + TwitterHistogram()
        + display()
        + setDatasetCreator()
    }
  }
  

  namespace alu0101361093.proyectofinal.view {
    class alu0101361093.proyectofinal.view.TwitterPieChart {
        + TwitterPieChart()
        + display()
        + setDatasetCreator()
    }
  }
  

  namespace alu0101361093.proyectofinal.view {
    class alu0101361093.proyectofinal.view.TwitterTimeSeries {
        + TwitterTimeSeries()
        + display()
        + setDatasetCreator()
    }
  }
  

  namespace alu0101361093.proyectofinal.view {
    interface alu0101361093.proyectofinal.view.TwitterView {
        {abstract} + display()
    }
  }
  

  alu0101361093.proyectofinal.view.TwitterBarChart .up.|> alu0101361093.proyectofinal.view.TwitterView
  alu0101361093.proyectofinal.view.TwitterBarChart o-- alu0101361093.proyectofinal.twitterdatasetcreator.TwitterDatasetCreator : datasetCreator
  alu0101361093.proyectofinal.view.TwitterHistogram .up.|> alu0101361093.proyectofinal.view.TwitterView
  alu0101361093.proyectofinal.view.TwitterHistogram o-- alu0101361093.proyectofinal.twitterdatasetcreator.TwitterDatasetCreator : datasetCreator
  alu0101361093.proyectofinal.view.TwitterPieChart .up.|> alu0101361093.proyectofinal.view.TwitterView
  alu0101361093.proyectofinal.view.TwitterPieChart o-- alu0101361093.proyectofinal.twitterdatasetcreator.TwitterDatasetCreator : datasetCreator
  alu0101361093.proyectofinal.view.TwitterTimeSeries .up.|> alu0101361093.proyectofinal.view.TwitterView
  alu0101361093.proyectofinal.view.TwitterTimeSeries o-- alu0101361093.proyectofinal.twitterdatasetcreator.TwitterDatasetCreator : datasetCreator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
